--- a/web_server/src/main/resources/templates/login.html
+++ b/web_server/src/main/resources/templates/login.html
@@ -1,24 +1,14 @@
 ﻿<html xmlns="http://www.w3.org/1999/xhtml" content="text/html;">
 <head>
-    <title>Login</title>
+    <title>Index</title>
 </head>
 <body>
 <div class="top">
-    <img src="img/login.png">
-    <br/>
-    <form action="login" method="post">
-        <label>
-            login <br/>
-            <input type="text" name="login" value="user7">
-        </label>
-        <br/>
-        <label>
-            password<br/>
-            <input type="password" name="password" value="11111">
-        </label>
-        <br/><br/>
-        <input type="submit" value="Перейти к списку пользователей">
-    </form>
+    <h3>Добро пожаловать</h3>
+    <p></p><a href="login">Логин</a></p>
+    <p><a href="users">Пользователи</a></p>
+    <p><a href="add_user">Добавить пользователя</a></p>
+    <p></p><a href="logout">Выход</a></p>
 </div>
 </body>
 </html>
