--- a/web_server/src/main/resources/templates/users.html
+++ b/web_server/src/main/resources/templates/users.html
@@ -1,43 +1,14 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+﻿<html xmlns="http://www.w3.org/1999/xhtml" content="text/html;">
 <head>
-    <title>Пользователи</title>
-    <script>
-        function getUserById() {
-            const userIdTextBox = document.getElementById('userIdTextBox');
-            const userDataContainer = document.getElementById('userDataContainer');
-            const id = userIdTextBox.value;
-            //fetch('api/user?id=' + id)
-            fetch('api/user/' + id)
-                .then(response => response.json())
-                .then(user => userDataContainer.innerHTML = JSON.stringify(user));
-        }
-    </script>
+    <title>Index</title>
 </head>
-
 <body>
-<h4>Получить пользователя по id</h4>
-<input type="text" id = "userIdTextBox" value="3" placeholder="Введите id пользователя">
-<button onclick="getUserById()">Получить</button>
-<pre id = "userDataContainer"></pre>
-
-<h4>Случайный пользователь</h4>
-<table style="width: 400px">
-    <thead>
-        <tr>
-            <td style="width: 50px">Id</td>
-            <td style="width: 150px">Имя</td>
-            <td style="width: 100px">Логин</td>
-            <td style="width: 100px">Пароль</td>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>${randomUser.id}</td>
-            <td>${randomUser.name}</td>
-            <td>${randomUser.login}</td>
-            <td>${randomUser.password}</td>
-        </tr>
-    </tbody>
-</table>
+<div class="top">
+    <h3>Добро пожаловать</h3>
+    <p></p><a href="login">Логин</a></p>
+    <p><a href="users">Пользователи</a></p>
+    <p><a href="add_user">Добавить пользователя</a></p>
+    <p></p><a href="logout">Выход</a></p>
+</div>
 </body>
 </html>
