--- a/web_server/src/main/resources/templates/login.html
+++ b/web_server/src/main/resources/templates/login.html
@@ -1,14 +1,9 @@
-﻿<html xmlns="http://www.w3.org/1999/xhtml" content="text/html;">
+﻿<html>
 <head>
-    <title>Index</title>
+    <title>login</title>
 </head>
 <body>
-<div class="top">
-    <h3>Добро пожаловать</h3>
-    <p></p><a href="login">Логин</a></p>
-    <p><a href="users">Пользователи</a></p>
-    <p><a href="add_user">Добавить пользователя</a></p>
-    <p></p><a href="logout">Выход</a></p>
-</div>
+    <h3>login</h3>
+    <p><a href="index.html">back</a></p>
 </body>
 </html>
